--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         version: '1.10'
     - name: "Install Jupyter"
-      run: pip3 install notebook
+      run: pip3 install notebook jupytext
     - name: "Install julia pre-requisites"
       run: |
         julia -e '
