Can you tell I don't know yaml?

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,4 +45,5 @@ jobs:
     name: "Run tests"
     strategy:
       matrix: ${{fromJSON(needs.job1.outputs.matrix)}}
-    run: python3 tester.py
+    steps:
+    - run: python3 tester.py
