--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - id: set-matrix
-      run: echo "::set-output name=matrix::{\"node\":[$(python getter.py)]"}"
+      run: echo "::set-output name=matrix::{\"node\":[$(python getter.py)]}"
   job2:
     name: "Run tests"
     runs-on: ubuntu-latest
