--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
     - id: set-matrix
       run: |
-        ls
+        echo $(ls -lah)
         echo "::set-output name=matrix::{\"node\":[$(python getter.py)]}"
   job2:
     needs:
