--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,8 +38,8 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
+    - uses: actions/checkout@v3
     - id: set-matrix
-      uses: actions/checkout@v3
       run: |
         echo $(ls -lah)
         echo "::set-output name=matrix::{\"node\":[$(python getter.py)]}"
