--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,28 +10,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-#  prepare:
-#    name: Test schedule
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v3
-#    - name: "Set up Julia"
-#      uses: julia-actions/setup-julia@v1
-#      with:
-#        version: '1.10'
-#    - name: "Install Jupyter"
-#      run: pip3 install notebook jupytext
-#    - name: "Install julia pre-requisites"
-#      run: |
-#        julia -e '
-#          using Pkg
-#          Pkg.add("IJulia")
-#          Pkg.add("Oscar")
-#          Pkg.add("BenchmarkTools")
-#          Pkg.add("GraphRecipes")
-#          Pkg.add("Graphs")
-#          Pkg.add("Interact")
-#          Pkg.add("Plots")'
   job1:
     name: "Get tutorials list"
     runs-on: ubuntu-latest
@@ -41,7 +19,6 @@ jobs:
     - uses: actions/checkout@v3
     - id: set-matrix
       run: |
-        echo $(ls -lah)
         echo "::set-output name=matrix::{\"node\":[$(python getter.py)]}"
   job2:
     needs:
@@ -51,5 +28,22 @@ jobs:
     strategy:
       matrix: ${{fromJSON(needs.job1.outputs.matrix)}}
     steps:
-    #- run: python3 tester.py
-    - run: echo ${{ matrix.node }}
+    - uses: actions/checkout@v3
+    - name: "Set up Julia"
+      uses: julia-actions/setup-julia@v1
+      with:
+        version: '1.10'
+    - name: "Install Jupyter"
+      run: pip3 install notebook jupytext
+    - name: "Install julia pre-requisites"
+      run: |
+        julia -e '
+          using Pkg
+          Pkg.add("IJulia")
+          Pkg.add("Oscar")
+          Pkg.add("BenchmarkTools")
+          Pkg.add("GraphRecipes")
+          Pkg.add("Graphs")
+          Pkg.add("Interact")
+          Pkg.add("Plots")'
+    - run: python3 tester.py ${{ matrix.node }}
