--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,4 +46,6 @@ jobs:
           Pkg.add("Graphs")
           Pkg.add("Interact")
           Pkg.add("Plots")'
+    - run: mkdir -pv notebooks
     - run: python3 tester.py ${{ matrix.node }}
+      continue-on-error: true
