--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,9 +49,9 @@ jobs:
     - run: mkdir -pv notebooks
     - run: python3 tester.py ${{ matrix.node }}
       continue-on-error: true
-    #- name: Upload new notebook
-    #  uses: actions/upload-artifact@v4
-    #  with:
-    #    name: my-artifact
-    #    path: notebooks/*.ipynb
-    #    retention-days: 7
+    - name: Upload new notebook
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.node }}
+        path: notebooks/*.ipynb
+        retention-days: 7
