--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,7 +47,10 @@ jobs:
           Pkg.add("Interact")
           Pkg.add("Plots")'
     - run: mkdir -pv notebooks
-    - run: cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json 
+    - name: Use default julia environment
+      run: |
+        cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
+        mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
     - run: python3 tester.py ${{ matrix.node }}
       continue-on-error: true
     - name: Upload new notebook
