--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,6 +26,7 @@ jobs:
     name: "Run tests"
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: ${{fromJSON(needs.job1.outputs.matrix)}}
     steps:
     - uses: actions/checkout@v4
@@ -52,7 +53,6 @@ jobs:
         cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
         mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
     - run: python3 tester.py ${{ matrix.node }}
-      continue-on-error: true
     - name: Upload new notebook
       uses: actions/upload-artifact@v4
       with:
