--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,7 +16,7 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - id: set-matrix
       run: |
         echo "::set-output name=matrix::{\"node\":[$(python getter.py)]}"
@@ -26,9 +26,10 @@ jobs:
     name: "Run tests"
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix: ${{fromJSON(needs.job1.outputs.matrix)}}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: "Set up Julia"
       uses: julia-actions/setup-julia@v1
       with:
@@ -47,5 +48,14 @@ jobs:
           Pkg.add("Interact")
           Pkg.add("Plots")'
     - run: mkdir -pv notebooks
+    - name: Use default julia environment
+      run: |
+        cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
+        mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
     - run: python3 tester.py ${{ matrix.node }}
-      continue-on-error: true
+    - name: Upload new notebook
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.node }}
+        path: notebooks/*.ipynb
+        retention-days: 7
