--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,3 +59,11 @@ jobs:
         name: ${{ matrix.node }}
         path: notebooks/*.ipynb
         retention-days: 7
+    - name: Notify Slack Action
+      uses: ravsamhq/notify-slack-action@2.5.0
+      with:
+          status: ${{ job.status }}
+          notify_when: 'failure'
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
+            
