--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,7 +64,7 @@ jobs:
       uses: ravsamhq/notify-slack-action@2.5.0
       with:
           status: ${{ job.status }}
-          notify_when: 'failure'
+          #notify_when: 'failure' #now that things are fixed, fire a notification even on success, for testing.
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
             
