--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -65,7 +65,7 @@ jobs:
       with:
           token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
-          message_format: "{emoji} *{matrix.node}* {status_message} in <{run_url}>"
+          message_format: "{emoji} *${{matrix.node}}* {status_message} in <{run_url}>"
           #notify_when: 'failure' #now that things are fixed, fire a notification even on success, for testing.
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
