--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,7 +66,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
           message_format: "{emoji} *${{matrix.node}}* {status_message} in <{run_url}>"
-          notify_when: 'failure'
+          notify_when: 'failure,cancelled,skipped'
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
             
