--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v4
     - id: set-matrix
       run: |
-        echo "::set-output name=matrix::{\"node\":[$(python getter.py)]}"
+        echo "matrix={\"node\":[$(python getter.py)]}" >> $GITHUB_ENV
   job2:
     needs:
     - job1
@@ -28,6 +28,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: ${{fromJSON(needs.job1.outputs.matrix)}}
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
     - name: "Set up Julia"
