--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v4
     - id: set-matrix
       run: |
-        echo "matrix={\"node\":[$(python getter.py)]}" >> $GITHUB_ENV
+        echo "matrix={\"node\":[$(python getter.py)]}" >> $GITHUB_OUTPUT
   job2:
     needs:
     - job1
