--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,10 +54,11 @@ jobs:
         cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
         mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
     - run: python3 tester.py ${{ matrix.node }}
+    - run: echo "nbname=$(ls notebooks/*.ipynb | sed 's/notebooks\///')" >> $GITHUB_OUTPUT
     - name: Upload new notebook
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.node }}
+        name: ${{ nbname }}
         path: notebooks/*.ipynb
         retention-days: 7
     - name: Notify Slack Action
