Don't reuse cache between refs ?

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,7 +27,7 @@ jobs:
         version: '1.10'
     - uses: julia-actions/cache@v2
       with:
-        cache-name: julia-cache;workflow=${{ github.workflow }};arch=${{ runner.arch }}
+        cache-name: julia-cache;workflow=${{ github.workflow }};ref=${{ github.ref }}
         include-matrix: false
     - name: "Install julia pre-requisites"
       run: |
