--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,10 +25,6 @@ jobs:
       uses: julia-actions/setup-julia@v2
       with:
         version: '1.10'
-    - uses: julia-actions/cache@v2
-      with:
-        cache-name: julia-cache;workflow=${{ github.workflow }};ref=${{ github.ref }}
-        include-matrix: false
     - name: "Install julia pre-requisites"
       run: |
         julia -e '
@@ -39,6 +35,10 @@ jobs:
           Pkg.add("Graphs")
           Pkg.add("Interact")
           Pkg.add("Plots")'
+    - uses: julia-actions/cache@v2
+      with:
+        cache-name: julia-cache;workflow=${{ github.workflow }};ref=${{ github.run_id }}
+        include-matrix: false
   job2:
     needs:
     - job1
@@ -51,7 +51,7 @@ jobs:
     steps:
     - uses: julia-actions/cache@v2
       with:
-        cache-name: julia-cache;workflow=${{ github.workflow }};ref=${{ github.ref }}
+        cache-name: julia-cache;workflow=${{ github.workflow }};ref=${{ github.run_id }}
         include-matrix: false
     - uses: actions/checkout@v4
     - name: "Install Jupyter"
