--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,6 +54,8 @@ jobs:
           cache-name: julia-cache;workflow=${{ github.workflow }};ref=${{ github.run_id }}
           include-matrix: false
       - uses: actions/checkout@v4
+      - name: "Install updates"
+        run: apt update && apt dist-upgrade
       - name: "Install Jupyter"
         run: pip3 install --break-system-packages notebook jupytext
       - name: "Install julia pre-requisites"
