--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: "Install Jupyter"
         run: |
-          if (( $(echo "$(pip --version | awk '{print $2}') >= 23.1" |bc -l) )); then
+          if (( $(echo "$(pip --version | awk '{print $2}' | cut -d'.' -f 1,2) >= 23.1" |bc -l) )); then
             FLAG='--break-system-packages'
           else
             FLAG=''
