--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,7 @@ name: Run tests
 on:
   workflow_dispatch:
   push:
+  pull_request:
   schedule:
     - cron: "0 2 * * *"
 
@@ -78,10 +79,6 @@ jobs:
             Pkg.add("IJulia")
             Pkg.add("Plots")'
       - run: mkdir -pv notebooks
-      - name: Use default julia environment
-        run: |
-          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
-          mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
       - run: python3 tester.py ${{ matrix.node }}
       - name: Upload new notebook
         uses: actions/upload-artifact@v4
