--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,12 +33,12 @@ jobs:
         run: |
           julia -e '
             using Pkg
-            Pkg.add("Interact")'
-#            Pkg.add("Oscar")
-#            Pkg.add("BenchmarkTools")
-#            Pkg.add("GraphRecipes")
-#            Pkg.add("Graphs")
-#            Pkg.add("Plots")'
+            Pkg.add("Interact")
+            Pkg.add("Oscar")
+            Pkg.add("BenchmarkTools")
+            Pkg.add("GraphRecipes")
+            Pkg.add("Graphs")
+            Pkg.add("Plots")'
   job2:
     needs:
       - job1
@@ -71,32 +71,32 @@ jobs:
           julia -e '
             using Pkg
             Pkg.add("Interact")
-            Pkg.add("IJulia")'
-#            Pkg.add("Oscar")
-#            Pkg.add("BenchmarkTools")
-#            Pkg.add("GraphRecipes")
-#            Pkg.add("Graphs")
-#            Pkg.add("Plots")'
+            Pkg.add("IJulia")
+            Pkg.add("Oscar")
+            Pkg.add("BenchmarkTools")
+            Pkg.add("GraphRecipes")
+            Pkg.add("Graphs")
+            Pkg.add("Plots")'
       - run: mkdir -pv notebooks
       - name: Use default julia environment
         run: |
           cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | jq | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
           mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
           cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
-#      - run: python3 tester.py ${{ matrix.node }}
-#      - name: Upload new notebook
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: ${{ matrix.node }}
-#          path: notebooks/*.ipynb
-#          retention-days: 7
-#      - name: Notify Slack Action
-#        if: always()
-#        uses: ravsamhq/notify-slack-action@2.5.0
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          status: ${{ job.status }}
-#          message_format: "{emoji} *${{matrix.node}}* {status_message} in <{run_url}>"
-#          notify_when: "failure,cancelled,skipped"
-#        env:
-#          SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
+      - run: python3 tester.py ${{ matrix.node }}
+      - name: Upload new notebook
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.node }}
+          path: notebooks/*.ipynb
+          retention-days: 7
+      - name: Notify Slack Action
+        if: always()
+        uses: ravsamhq/notify-slack-action@2.5.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          status: ${{ job.status }}
+          message_format: "{emoji} *${{matrix.node}}* {status_message} in <{run_url}>"
+          notify_when: "failure,cancelled,skipped"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
