--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,6 +34,7 @@ jobs:
           julia -e '
             using Pkg
             Pkg.add("Interact")
+            Pkg.add("IJulia@1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
@@ -71,7 +72,7 @@ jobs:
           julia -e '
             using Pkg
             Pkg.add("Interact")
-            Pkg.add("IJulia")
+            Pkg.add("IJulia@1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
