--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,6 +34,8 @@ jobs:
         run: |
           julia -e '
             using Pkg
+            Pkg.add("Interact")
+            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
@@ -71,6 +73,8 @@ jobs:
         run: |
           julia -e '
             using Pkg
+            Pkg.add("Interact")
+            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
