--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -83,6 +83,10 @@ jobs:
             Pkg.add("IJulia")
             Pkg.add("Plots")'
       - run: mkdir -pv notebooks
+      - name: Use default julia environment
+        run: |
+          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
+          mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
       - run: python3 tester.py ${{ matrix.node }}
       - name: Upload new notebook
         uses: actions/upload-artifact@v4
