--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,7 @@ name: Run tests
 on:
   workflow_dispatch:
   push:
+  pull_request:
   schedule:
     - cron: "0 2 * * *"
 
@@ -33,6 +34,7 @@ jobs:
         run: |
           julia -e '
             using Pkg
+            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
@@ -70,6 +72,7 @@ jobs:
         run: |
           julia -e '
             using Pkg
+            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
@@ -80,8 +83,9 @@ jobs:
       - run: mkdir -pv notebooks
       - name: Use default julia environment
         run: |
-          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
-          mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
+          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | jq | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
+          mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
+          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
       - run: python3 tester.py ${{ matrix.node }}
       - name: Upload new notebook
         uses: actions/upload-artifact@v4
