--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -82,18 +82,24 @@ jobs:
             Pkg.add("Plots")'
       - run: mkdir -pv notebooks
       - name: Use default julia environment
+        continue-on-error: true
         run: |
           cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | jq | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
           mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
           cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
-      - run: python3 tester.py ${{ matrix.node }}
+      - name: Test the notebooks
+        continue-on-error: true
+        run: |
+          python3 tester.py ${{ matrix.node }}
       - name: Upload new notebook
+        continue-on-error: true
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.node }}
           path: notebooks/*.ipynb
           retention-days: 7
       - name: Notify Slack Action
+        continue-on-error: true
         if: always()
         uses: ravsamhq/notify-slack-action@2.5.0
         with:
