--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,6 @@ name: Run tests
 
 on:
   workflow_dispatch:
-  push:
   schedule:
     - cron: "0 2 * * *"
 
@@ -33,12 +32,11 @@ jobs:
         run: |
           julia -e '
             using Pkg
-            Pkg.add("Interact")
-            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
             Pkg.add("Graphs")
+            Pkg.add("Interact")
             Pkg.add("Plots")'
   job2:
     needs:
@@ -71,19 +69,18 @@ jobs:
         run: |
           julia -e '
             using Pkg
-            Pkg.add("Interact")
-            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Oscar")
             Pkg.add("BenchmarkTools")
             Pkg.add("GraphRecipes")
             Pkg.add("Graphs")
+            Pkg.add("Interact")
+            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Plots")'
       - run: mkdir -pv notebooks
       - name: Use default julia environment
         run: |
-          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | jq | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
-          mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
-          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
+          cat ~/.local/share/jupyter/kernels/julia-1.10/kernel.json | sed 's/^.*project=.*$//' > ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new
+          mv -v ~/.local/share/jupyter/kernels/julia-1.10/kernel.json.new  ~/.local/share/jupyter/kernels/julia-1.10/kernel.json
       - run: python3 tester.py ${{ matrix.node }}
       - name: Upload new notebook
         uses: actions/upload-artifact@v4
