--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,6 @@ name: Run tests
 
 on:
   workflow_dispatch:
-  push:
   schedule:
     - cron: "0 2 * * *"
 
@@ -75,7 +74,7 @@ jobs:
             Pkg.add("GraphRecipes")
             Pkg.add("Graphs")
             Pkg.add("Interact")
-            Pkg.add("IJulia")
+            Pkg.add(name="IJulia", version="1.31.1")
             Pkg.add("Plots")'
       - run: mkdir -pv notebooks
       - name: Use default julia environment
