--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,8 +20,7 @@ jobs:
       - id: set-matrix
         run: |
           set -e
-          NODES=$(python getter.py)
-          echo "matrix={\"node\":[${NODES}]}" >> "$GITHUB_OUTPUT"
+          echo "matrix={\"node\":[$(python getter.py)]}" >> $GITHUB_OUTPUT
 
   run_notebook:
     needs:
