--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - id: set-matrix
         run: |
+          set -e
           echo "matrix={\"node\":[$(python getter.py)]}" >> $GITHUB_OUTPUT
 
   run_notebook:
@@ -63,10 +64,16 @@ jobs:
             ])'
       - run: mkdir -pv notebooks
       - run: python3 tester.py ${{ matrix.node }}
+      - name: Sanitize artifact name
+        id: sanitize
+        run: |
+          SAFE_NAME="${{ matrix.node }}"
+          SAFE_NAME="${SAFE_NAME//\//_}"
+          echo "safe_name=$SAFE_NAME" >> "$GITHUB_OUTPUT"
       - name: Upload new notebook
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.node }}
+          name: ${{ steps.sanitize.outputs.safe_name }}
           path: notebooks/*.ipynb
           retention-days: 7
       - name: Notify Slack Action
